# Eliora

./: Modelfile  eliora.py  pyproject.toml  test.py
prompts/: voice.system.md
