[project]
name = "eliora"
version = "0.1.0"
description = ""
authors = [
    {name = "Misha",email = "three.sisters.3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama (>=0.5.3,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
